--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -88,13 +88,17 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
+}
+header a{
+	text-decoration: none;
+}
+form a{
+	margin: auto;
 }
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-
 li:hover {
 	color: #B1663C;
 }
@@ -178,6 +182,10 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	cursor: pointer;
+}
+input[type="submit"]:hover{
+	background-color: #1d615496;
 }
 
 footer nav ul {
@@ -185,4 +193,59 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
+.filtre{
+	display: flex;
+	justify-content: center;
+}
+.filtre button{
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 1.2em;
+	color: #1D6154;
+	background-color: white;
+	padding: 0.5em 1em;
+	margin : 2em 0.5em ;
+	text-align: center;
+	border: #1D6154 solid 2px;
+	border-radius: 60px ;
+	cursor: pointer;
+	
+}
+#portfolio button:hover{
+	color: white;
+	background-color: #1D6154;
 
+}
+
+/************** PAGE LOGIN**************/
+#login {
+	width: 50%;
+margin: auto;
+}
+#login > * {
+	text-align: center;
+
+}
+#login h2{
+	margin-bottom: 20px;
+}
+#login form {
+	text-align: left;
+	margin-top:30px;
+	display: flex;
+	flex-direction: column;
+}
+
+#login input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#login label {
+	margin: 2em 0 1em 0;
+}
+#login textarea {
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
