--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -129,7 +129,7 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
-.gallery {
+#gallery {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -137,8 +137,11 @@ li:hover {
 	grid-row-gap: 20px;
 }
 
-.gallery img {
-	width: 100%;
+#gallery figure img {
+	width: 300px;
+	height: 500px;
+	/* width: 100%;
+	height: 100%; */
 
 }
 #contact {
