--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -138,12 +138,10 @@ li:hover {
 }
 
 #gallery figure img {
-	width: 300px;
-	height: 500px;
-	/* width: 100%;
-	height: 100%; */
 
+	width: 100%;
 }
+
 #contact {
 	width: 50%;
 margin: auto;
