--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -219,34 +219,37 @@ footer nav ul {
 }
 
 /************** PAGE LOGIN**************/
-#login {
+#login-champ {
 	width: 50%;
 margin: auto;
 }
-#login > * {
+#login-champ > * {
 	text-align: center;
 
 }
-#login h2{
+#login-champ h2{
 	margin-bottom: 20px;
 }
-#login form {
+#login-champ form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#login input {
+#login-champ input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#login label {
+#login-champ label {
 	margin: 2em 0 1em 0;
 }
-#login textarea {
+#login-champ textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#erreur {
+	color: red
 }
