--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -24,6 +24,8 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
+/****************PAGE INDEX************************************************/
+/******************************************************************************/
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -219,6 +221,7 @@ footer nav ul {
 }
 
 /************** PAGE LOGIN**************/
+/***********************************************************************/
 #login-champ {
 	width: 50%;
 margin: auto;
@@ -252,4 +255,88 @@ margin: auto;
 }
 #erreur {
 	color: red
+}
+
+
+/**********PAGE ADMIN***********************************************/
+/*********************************************************************/
+/***********MODALE****************************************************/
+#bandeau{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	background-color: black;
+	width: 100%;
+	height: 40px;
+}
+#bandeau h3{
+	display: flex;
+	color: white;
+	align-items: center;
+	margin: 0 10px;
+}
+#bandeau a{
+	display: flex;
+	font-size: 10px;
+	text-decoration: none;
+	color: white;
+	align-items: center;
+}
+#publier{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: black;
+	background-color: white;
+	text-align: center;
+	border-radius: 60px ;
+	cursor: pointer;
+	height: 80%;
+	margin-top: 4px;
+	padding: auto;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.modal{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgb(0, 0, 0, 0.4);
+}
+.modal-box{
+	width: 25%;
+	height: 60%;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	padding: 20px;
+	background-color: white;
+	border-radius: 10px;
+	
+}
+#modif-portfolio{
+font-size: 10px;
+text-decoration: none;
+color: black;
+align-items: center;
+padding: 10px;
+}
+#modif-photo{
+	font-size: 10px;
+	text-decoration: none;
+	color: black;
+	align-items: center;
+	margin-left: 55px;
+	padding-top: 5px;
+}
+#modif-presentation{
+	font-size: 10px;
+	text-decoration: none;
+	color: black;
+	align-items: center;
+
+
 }
