--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -256,7 +256,10 @@ margin: auto;
 #erreur {
 	color: red
 }
-
+#logout-button{
+	padding: 0 10px;
+    font-size: 1.2em;
+}
 
 /**********PAGE ADMIN***********************************************/
 /*********************************************************************/
@@ -297,7 +300,7 @@ margin: auto;
 	padding-right: 20px;
 }
 .modal{
-	display: flex;
+	/* display: flex; */
 	align-items: center;
 	justify-content: center;
 	position: fixed;
@@ -439,12 +442,14 @@ padding: 10px;
 	padding: 20px 0 40px 0;
 	color: black;
 }
+
 #addPic{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: rgba(168, 194, 194, 0.438);
+
+	background-color: rgb(232,241,246);
 	width: 80%;
 	height: 30%;
 	border-radius: 5px;
@@ -457,9 +462,12 @@ padding: 10px;
 	width: 50%;
 	color: black;
 }
+#addPic p{
+	font-size: 0.9em;
+	padding-bottom: 40px;
+}
 #preview{
-	height: 50%;
-
+	height: 100%;
 }
 
 /* FORMULAIRE MODAL 2********* */
@@ -513,4 +521,31 @@ margin: auto;
 	border-radius: 60px ;
 	border: none;
 	cursor: pointer;
+}
+/* cacher bouton photo */
+#photo-input {
+	display: none;
+  }
+
+#btnAjoutPhoto{
+	display: flex;
+	justify-content: center;
+	font-family: 'Syne';
+	font-weight: 700;
+	color: #43748f;
+	background-color: rgb(203, 214, 220);
+	margin : auto ;
+	padding: 10px 30px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	cursor: pointer;
+  }
+
+
+#categorie {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
