V1 suppression ok, mantenant travaille sur " ajout work + valider non cliquable , et exit modal"

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -456,6 +456,8 @@ padding: 10px;
 	margin: auto;
 }
 #addPic i {
+	margin-top: 50px;
+	font-size:8em;
 	display: flex;
 	justify-content: center;
     color: #43748f;
