--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -551,12 +551,18 @@ padding: 10px;
 	text-align: center;
 	border-radius: 60px ;
 	border: none;
-	width: 160px;
-	height: 15px;
+	width: 230px;
+}
+#champVide{
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+	color: red;
 }
 /* cacher bouton photo */
 #photo-input {
 	display: none;
+
   }
 
 #btnAjoutPhoto{
