--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -532,6 +532,7 @@ padding: 10px;
 	color: white;
 	background-color: #1D6154;
 	margin : auto ;
+	margin-bottom: 200px;
 	padding: 10px 30px;
 	text-align: center;
 	border-radius: 60px ;
